--- a/Entrada.html
+++ b/Entrada.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <video autoplay muted loop>
-            <source src="vidios/video1.mp4" type="video/mp4">
+            <source src="video1.mp4" type="video/mp4">
         </video>
         <div class="login-contenedor">
             <h2>Iniciar Sesión</h2>
