--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <video autoplay muted loop>
-            <source src="vidios/video2.mp4" type="video/mp4">
+            <source src="video2.mp4" type="video/mp4">
         </video>
         <div class="contenedor">
             <h1>FIGURAS PLANAS DE AREAS</h1>
